<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gif="http://schemas.android.com/apk/res/"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"  >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"

    tools:context=".SplashActivity">

    <!-- TextView similar to labels -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/darkTeal" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAuthor"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFFFFF" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/itGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/animation"
        gif:auto_play="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/txtCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCompany"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itGif"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtContact"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCompany"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtLinkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLinkedIn"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContact"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>